# dji-er-workflow

./: .gitignore  CLAUDE.md  README.md  config.json  layout.json  spec.yaml
ecoscope-workflows-dji-er-workflow/: Dockerfile  README.md  VERSION.yaml  pixi.toml  pyproject.toml
ecoscope-workflows-dji-er-workflow/dji-er-tasks/: pyproject.toml
ecoscope-workflows-dji-er-workflow/dji-er-tasks/dji_er_tasks/: __init__.py  demfetch.py  geolocate.py
ecoscope-workflows-dji-er-workflow/ecoscope_workflows_dji_er_workflow/: cli.py  params.json  rjsf.json
ecoscope-workflows-dji-er-workflow/ecoscope_workflows_dji_er_workflow/dags/: run_sequential.py  run_sequential_mock_io.py
ecoscope-workflows-dji-er-workflow/tests/: conftest.py  test_metadata.py
schemas/: uas_flight_folio_schema.json  uas_imagery_schema.json
