[project]
name = "dji-er-tasks"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "geopandas",
    "pandas",
    "numpy",
    "rasterio",
    "pillow",
    "wt-registry>=0.2,<1",
]

[project.entry-points."wt_registry"]
dji_er_tasks = "dji_er_tasks"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dji_er_tasks"]
artifacts = ["dji_er_tasks/bin/*"]
